# pythonProject4

./: category.json  product.json  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_alter_blog_created_at_alter_blog_description_and_more.py
blog/templates/blog/: blog_confirm_delete.html
catalog/: models.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_description_alter_category_name_and_more.py
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
